--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,19 @@
-anyio==3.7.0
-click==8.1.3
-colorama==0.4.6
-fastapi==0.95.2
-h11==0.14.0
-httptools==0.5.0
-idna==3.4
-Jinja2==3.1.2
-MarkupSafe==2.1.2
-pydantic==1.10.8
-python-decouple==3.8
-python-dotenv==1.0.0
-pywin32==306
-PyYAML==6.0
-sniffio==1.3.0
-starlette==0.27.0
-typing_extensions==4.6.2
-uvicorn==0.22.0
-watchfiles==0.19.0
-websockets==11.0.3
+anyio
+click
+colorama
+fastapi
+h11
+httptools
+idna
+Jinja2
+MarkupSafe
+pydantic
+python-decouple
+pywin32
+PyYAML
+sniffio
+starlette
+typing_extensions
+uvicorn
+watchfiles
+websockets
